grpc_gateway implementation
